iasbet.com (archived on 2009-06-15)
{
  "alexa_rank": 59638,
  "analysis_subcorpus": true,
  "categories": "sports",
  "char_count": 5608,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.39,
  "homepage_snapshot_redirected_domain": "iasbet.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090402021245id_/http://www.iasbet.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090402021245id_/http%3A//iasbet.com",
  "interval": "2009_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "iasbet.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090615164817id_/http%3A//www.iasbet.com/help/privacy.aspx",
  "policy_title": "IASbet.com - Privacy Policy",
  "policy_url": "iasbet.com/help/privacy.aspx",
  "sha1": "1f1463fa648e95c702bd6eeeb2154fc82bf2d793",
  "simhash": 10665477555413483650,
  "simhash_updated": false,
  "site_hostname": "iasbet.com",
  "site_url": "http://iasbet.com",
  "smog": 15.16,
  "strict_updated": false,
  "timestamp": "20090615164817",
  "word_count": 904,
  "year": 2009
}

--- a/i/ia/ias/iasbet.com.html
+++ b/i/ia/ias/iasbet.com.html
@@ -1,17 +1,18 @@
-<!--The following is the downloaded HTML source of the iasbet.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216011804id_/http%3A//www.iasbet.com/help/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iasbet.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615164817id_/http%3A//www.iasbet.com/help/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<title>IASbet.com - Privacy Policy</title>
 	
-	<link rel="Shortcut Icon" href="/images/1/favicon.ico">
-	 
-	<link href="/styles/1/en/layout.css" rel="stylesheet" type="text/css" media="screen">
 	
 	<link href="/styles/1/en/brand.css" rel="stylesheet" type="text/css" media="screen">
 	<link href="/styles/1/en/print.css" rel="stylesheet" type="text/css" media="print">
 	<link href="/styles/1/en/checkbox.css" rel="stylesheet" type="text/css" media="screen">
+	<link rel="Shortcut Icon" href="/images/1/favicon.ico">
 
+	 
+	<link href="/styles/1/en/layout.css" rel="stylesheet" type="text/css" media="screen">
+	
 	<link href="/w3c/p3p.xml" type="application/xml" rel="P3Pv1" title="P3P Policy">
 	
 	<script language="javascript">
@@ -25,8 +26,8 @@
 		}
 		var GENERAL_Script = new GENERAL_ScriptDefinition();
 	</script>
-	<script language="JavaScript" src="/ClientScripts/general.js?ver=4.1.71.0" type="text/javascript"></script>
-	<script language="JavaScript" src="/ClientScripts/AC_RunActiveContent.js?ver=4.1.71.0" type="text/javascript"></script>	
+	<script language="JavaScript" src="/ClientScripts/general.js?ver=4.1.80.0" type="text/javascript"></script>
+	<script language="JavaScript" src="/ClientScripts/AC_RunActiveContent.js?ver=4.1.80.0" type="text/javascript"></script>	
 	<script language="JavaScript" type="text/javascript">
 			function include(script_filename) {
 					document.write('<' + 'script');
@@ -77,7 +78,7 @@
 		}
 		var CLIENT_Login = new CLIENT_LoginDefinition();
 	</script>
-	<script language="JavaScript" src="/ClientScripts/md5a.js?ver=4.1.71.0" type="text/javascript"></script>	
+	<script language="JavaScript" src="/ClientScripts/md5a.js?ver=4.1.80.0" type="text/javascript"></script>	
 	
 </head>
 <body>
@@ -86,7 +87,7 @@
 <div id="container">
 <div id="boxin">
 <div id="header">
-<div id="site_name"><a href="http://www.iasbet.com/"><img src="/images/1/en/logos/company-logo.gif" alt="" border="0"></a></div>
+<div id="site_name"><a href="/"><img src="/images/1/en/logos/company-logo.gif" alt="IASBet - Online Betting" border="0"></a></div>
 
 
 	<div id="login">
@@ -96,22 +97,25 @@
 				<li><label>Password: <input style="vertical-align:bottom;" type="password" size="6" id="pword" name="pword" value=""></label></li>
 				<li><label>Validation: <img src="/includes/AntiAutoDrawImage.aspx?bgpath=D%3a%5c%5cProjects%5c%5cGold%5c%5cWeb%5c%5cIASbet_GLD%5c%5cimages%5c%5cantiauto_bg_login.jpg&amp;fontfamily=Arial&amp;fontstyle=Bold&amp;fontsize=12&amp;fontcolor=DarkBlue&amp;index1_x=3&amp;index2_x=13&amp;index1_y=2&amp;index2_y=1" align="absmiddle"> <input style="vertical-align:bottom;" type="text" size="6" id="AntiAutoUserText" name="AntiAutoUserText"><input type="hidden" id="AntiAutoValid" name="AntiAutoValid" value=""></label></li>
 				<li><input type="submit" id="login-btn" value="Login" alt="" title="Click To Login"></li>
-				<li><span style="font-size: 0.9em; font-style:italic; padding-right:12px;">Enter the characters above into the box</span><a href="https://www.iasbet.com/myaccount/password_retrevial.aspx">Password?</a></li>
+				<li><span style="font-size: 0.9em; font-style:italic; padding-right:12px;">Enter the characters above into the box</span><a href="https://www.iasbet.com/myaccount/password_retrevial.aspx">Password?</a> &nbsp;&nbsp;<a href="javascript:OpenPopupBigger('validation_help', 700, 850);">Validation Help</a></li>
+				<!--	
 				<li style="display:block;list-style-type:none;margin-right:2px;"><a href="javascript:OpenPopupBigger('validation_help', 700, 850);">Validation Help</a></li>			
+				-->
 			</ul>
 		</form>
 	</div> 	
 
 	<div id="tabs">
 		<ul>
-			<li><a href="http://www.iasbet.com/default.aspx">Home</a></li><li><a href="http://www.iasbet.com/sport/SoccerMenuLive.aspx">Live Soccer</a></li><li><a href="http://www.iasbet.com/site/racing/racingmain.aspx">Racing</a></li><li><a href="http://www.iasbet.com/Sport/SportMain.aspx?PeriodMinutes=0">Sports</a></li><li><a href="http://server.iad.liveperson.net/hc/2760631/?cmd=file&amp;file=visitorWantsToChat&amp;site=2760631&amp;byhref=1&amp;imageUrl=http://www.canbet.co.uk/images" target="chat83179417" onclick="javascript:OpenLiveChat();">Live Help</a></li><li class="message"><a href="https://www.iasbet.com/myaccount/join/joinfull.aspx">Join Now</a></li>
+			<li><a href="http://www.iasbet.com/">Home</a></li><li><a href="http://www.iasbet.com/sport/SoccerMenuLive.aspx">Live Soccer</a></li><li><a href="http://www.iasbet.com/site/racing/racingmain.aspx">Racing</a></li><li><a href="http://www.iasbet.com/Sport/SportMain.aspx?PeriodMinutes=0">Sports</a></li><li><a href="http://server.iad.liveperson.net/hc/2760631/?cmd=file&amp;file=visitorWantsToChat&amp;site=2760631&amp;byhref=1&amp;imageUrl=http://www.canbet.co.uk/images" target="chat83179417" onclick="javascript:OpenLiveChat();">Live Help</a></li><li class="message"><a href="https://www.iasbet.com/myaccount/join/joinfull.aspx">Join Now</a></li>
 		</ul>
 	</div><!-- end tabs -->		
 </div><!-- end header -->
 <div id="menu">
-	<ul><li class="head"><a href="http://www.iasbet.com/default.aspx">Home</a></li><li><a href="http://www.iasbet.com/aboutus/default.aspx">About Us</a></li><li><a href="http://server.iad.liveperson.net/hc/2760631/?cmd=file&amp;file=visitorWantsToChat&amp;site=2760631&amp;byhref=1&amp;imageUrl=http://www.canbet.co.uk/images" target="chat83179417" onclick="javascript:OpenLiveChat();">Live Help</a></li><li><a href="http://www.iasbet.com/site/freebet/FBMenu.aspx" onclick="return CheckLoggedInlnk();">Free Bets</a></li><li><a href="http://www.iasbet.com/site/freebet/FBBonuses.aspx">Bonuses</a></li><li><a href="http://www.iasbet.com/help/bankingfaq.aspx">Banking Information</a></li><li><a href="http://www.iasbet.com/aboutus/contactus.aspx">Contact Us</a></li><li><a href="http://www.iasbet.com/Help/default.aspx">Help &amp; Rules</a></li><li class="message"><a href="https://www.iasbet.com/MyAccount/Join/JoinFull.aspx">Join Now</a></li><li class="head"><a href="http://www.iasbet.com/site/racing/racingmain.aspx">Racing</a></li><li><a href="http://www.iasbet.com/site/speedbet/default.aspx">Speed Betting</a></li><li><a href="http://www.iasbet.com/site/racing/racingmeetingsstatus.aspx?type=R&amp;country=AU&amp;date=">Australian &amp; NZ Horses</a></li><li><a href="http://www.iasbet.com/site/racing/racingmeetingsstatus.aspx?type=T&amp;country=AU&amp;date=">Australian Harness</a></li><li><a href="http://www.iasbet.com/site/racing/racingmeetingsstatus.aspx?type=G&amp;country=AU&amp;date=">Australian Greyhounds</a></li><li><a href="http://www.iasbet.com/site/racing/racingmeetingsstatus.aspx?type=R&amp;country=HK&amp;date=">Hong Kong Horses</a></li><li><a href="http://www.iasbet.com/site/racing/racingmeetingsstatus.aspx?type=R&amp;country=SG&amp;date=">Singapore Horses</a></li><li><a href="http://www.iasbet.com/site/racing/racingfuturelist.aspx">Future Racing</a></li><li class="head"><a href="http://www.iasbet.com/sport/soccer-football-betting.aspx">Soccer</a></li><li><a href="http://www.iasbet.com/sport/SoccerMenuLive.aspx">Live 'In-Play'</a></li><li><a href="http://www.iasbet.com/sport/soccer-football-betting.aspx">Major Leagues</a></li><li><a href="http://www.iasbet.com/sport/soccer-football-betting.aspx#OLeagues">Other Leagues</a></li><li class="head"><a href="http://www.iasbet.com/Sport/SportMain.aspx?PeriodMinutes=0">Sports</a></li><li><a href="http://www.iasbet.com/sport/american-football-betting.aspx">American Football</a></li><li><a href="http://www.iasbet.com/sport/afl-football-betting.aspx">Australian Rules</a></li><li><a href="http://www.iasbet.com/sport/basketball-betting.aspx">Basketball</a></li><li><a href="http://www.iasbet.com/sport/mlb-baseball-betting.aspx">Baseball</a></li><li><a href="http://www.iasbet.com/sport/boxing-betting.aspx">Boxing</a></li><li><a href="http://www.iasbet.com/sport/cricket-betting.aspx">Cricket</a></li><li><a href="http://www.iasbet.com/sport/cycling-betting.aspx">Cycling</a></li><li><a href="http://www.iasbet.com/sport/golf-betting.aspx">Golf</a></li><li><a href="http://www.iasbet.com/sport/nhl-hockey-betting.aspx">Ice Hockey</a></li><li><a href="http://www.iasbet.com/sport/motorsport-betting.aspx">Motor Racing</a></li><li><a href="http://www.iasbet.com/sport/SportMenuDefault.aspx?ID=19">Netball</a></li><li><a href="http://www.iasbet.com/sport/olympic-sports-betting.aspx">Olympic Games</a></li><li><a href="http://www.iasbet.com/sport/rugby-league-betting.aspx">Rugby League</a></li><li><a href="http://www.iasbet.com/sport/rugby-union-betting.aspx">Rugby Union</a></li><li><a href="http://www.iasbet.com/Sport/snooker/">Snooker</a></li><li><a href="http://www.iasbet.com/sport/soccer-football-betting.aspx">Soccer</a></li><li><a href="http://www.iasbet.com/sport/tennis-betting.aspx">Tennis</a></li><li><a href="http://www.iasbet.com/sport/SportMenuDefault.aspx?ID=32">Yachting</a></li><li><a href="http://www.iasbet.com/sport/election-betting.aspx">Elections</a></li><li><a href="http://www.iasbet.com/sport/entertainment-betting.aspx">Entertainment</a></li><li><a href="http://www.iasbet.com/sport/other-sports-betting.aspx">Other Events</a></li><li class="shaded"><a href="/whatsnew/melbourne-cup.aspx">Melbourne Cup</a></li></ul>
+	<ul><li class="head"><a href="http://www.iasbet.com/">Home</a></li><li><a href="http://www.iasbet.com/aboutus/default.aspx">About Us</a></li><li><a href="http://server.iad.liveperson.net/hc/2760631/?cmd=file&amp;file=visitorWantsToChat&amp;site=2760631&amp;byhref=1&amp;imageUrl=http://www.canbet.co.uk/images" target="chat83179417" onclick="javascript:OpenLiveChat();">Live Help</a></li><li><a href="http://www.iasbet.com/site/freebet/FBMenu.aspx" onclick="return CheckLoggedInlnk();">Free Bets</a></li><li><a href="http://www.iasbet.com/site/freebet/FBBonuses.aspx">Bonuses</a></li><li><a href="http://www.iasbet.com/help/bankingfaq.aspx">Banking Information</a></li><li><a href="http://www.iasbet.com/aboutus/contactus.aspx">Contact Us</a></li><li><a href="http://www.iasbet.com/Help/default.aspx">Help &amp; Rules</a></li><li class="message"><a href="https://www.iasbet.com/MyAccount/Join/JoinFull.aspx">Join Now</a></li><li class="head"><a href="http://www.iasbet.com/site/racing/racingmain.aspx">Racing</a></li><li><a href="http://www.iasbet.com/site/speedbet/default.aspx">Speed Betting</a></li><li><a href="http://www.iasbet.com/site/racing/racingmeetingsstatus.aspx?type=R&amp;country=AU&amp;date=">Australian &amp; NZ Horses</a></li><li><a href="http://www.iasbet.com/site/racing/racingmeetingsstatus.aspx?type=T&amp;country=AU&amp;date=">Australian Harness</a></li><li><a href="http://www.iasbet.com/site/racing/racingmeetingsstatus.aspx?type=G&amp;country=AU&amp;date=">Australian Greyhounds</a></li><li><a href="http://www.iasbet.com/racing/uk-horse-racing.aspx">UK &amp; Irish Horses</a></li><li><a href="http://www.iasbet.com/site/racing/racingmeetingsstatus.aspx?type=R&amp;country=HK&amp;date=">Hong Kong Horses</a></li><li><a href="http://www.iasbet.com/site/racing/racingmeetingsstatus.aspx?type=R&amp;country=SG&amp;date=">Singapore Horses</a></li><li><a href="http://www.iasbet.com/site/racing/racingfuturelist.aspx">Early Bird &amp; Futures</a></li><li><a href="http://www.iasbet.com/Sport/BetTypeContainer.aspx?SportId=36&amp;CompetitionId=40081&amp;BetTypeId=1892&amp;FutureFlag=False">Jockey Challenge</a></li><li class="head"><a href="http://www.iasbet.com/sport/soccer-football-betting.aspx">Soccer</a></li><li><a href="http://www.iasbet.com/sport/SoccerMenuLive.aspx">Live 'In-Play'</a></li><li><a href="http://www.iasbet.com/sport/soccer-football-betting.aspx">Major Leagues</a></li><li><a href="http://www.iasbet.com/sport/soccer-football-betting.aspx#OLeagues">Other Leagues</a></li><li class="head"><a href="http://www.iasbet.com/Sport/SportMain.aspx?PeriodMinutes=0">Sports</a></li><li><a href="http://www.iasbet.com/sport/american-football-betting.aspx">American Football</a></li><li><a href="http://www.iasbet.com/sport/afl-football-betting.aspx">Australian Rules</a></li><li><a href="http://www.iasbet.com/sport/basketball-betting.aspx">Basketball</a></li><li><a href="http://www.iasbet.com/sport/mlb-baseball-betting.aspx">Baseball</a></li><li><a href="http://www.iasbet.com/sport/boxing-betting.aspx">Boxing</a></li><li><a href="http://www.iasbet.com/sport/cricket-betting.aspx">Cricket</a></li><li><a href="http://www.iasbet.com/sport/cycling-betting.aspx">Cycling</a></li><li><a href="http://www.iasbet.com/sport/golf-betting.aspx">Golf</a></li><li><a href="http://www.iasbet.com/sport/nhl-hockey-betting.aspx">Ice Hockey</a></li><li><a href="http://www.iasbet.com/sport/motorsport-betting.aspx">Motor Racing</a></li><li><a href="http://www.iasbet.com/sport/SportMenuDefault.aspx?ID=19">Netball</a></li><li><a href="http://www.iasbet.com/sport/olympic-sports-betting.aspx">Olympic Games</a></li><li><a href="http://www.iasbet.com/sport/rugby-league-betting.aspx">Rugby League</a></li><li><a href="http://www.iasbet.com/sport/rugby-union-betting.aspx">Rugby Union</a></li><li><a href="http://www.iasbet.com/Sport/snooker/">Snooker</a></li><li><a href="http://www.iasbet.com/sport/soccer-football-betting.aspx">Soccer</a></li><li><a href="http://www.iasbet.com/sport/tennis-betting.aspx">Tennis</a></li><li><a href="http://www.iasbet.com/sport/SportMenuDefault.aspx?ID=32">Yachting</a></li><li><a href="http://www.iasbet.com/sport/election-betting.aspx">Elections</a></li><li><a href="http://www.iasbet.com/sport/entertainment-betting.aspx">Entertainment</a></li><li><a href="http://www.iasbet.com/sport/other-sports-betting.aspx">Other Events</a></li><li class="shaded"><a href="/whatsnew/melbourne-cup.aspx">Melbourne Cup</a></li></ul>
 </div><!-- end menu -->
-<input type="hidden" id="XMLId" value="63383">
+
+<input type="hidden" id="XMLId" value="7035">
 <div id="content">
 	
 			<div id="cmt-copy">
@@ -209,18 +213,18 @@
 </div></td>
 	<td>
 		
- 		<div id="footer_nav"><p><a href="/default.aspx">Home</a> 
-		| <a href="/site/common/sitemap.aspx">Site Map</a>
-	    | <a href="/help/privacy.aspx">Privacy</a>
-	    | <a href="/aboutus/disclaimer.aspx">Disclaimer</a>
-	    | <a href="/aboutus/responsiblegaming.aspx">Responsible Gambling</a>
+ 		<div id="footer_nav"><p><a href="/">Home</a> 
+		| <a href="/site/common/sitemap.aspx">Sitemap</a>
+	    | <a rel="nofollow" href="/help/privacy.aspx">Privacy</a>
+	    | <a rel="nofollow" href="/aboutus/disclaimer.aspx">Disclaimer</a>
+	    | <a rel="nofollow" href="/aboutus/responsiblegaming.aspx">Responsible Gambling</a>
 		| <a href="#" onclick="OpenPopUpWindow('http://www.commissionking.com','Affiliate','scrollbars=yes,resizable=yes,width=800,height=600')">Affiliates</a>
-		| <a href="/aboutus/default.aspx">About Us</a>
+		| <a rel="nofollow" href="/aboutus/default.aspx">About Us</a>
 		| <a href="/aboutus/contactus.aspx">Contact Us</a> <br> 
 		  <a href="http://www.internationalallsports.com/">Corporate</a> 
-		| <a href="http://www.internationalallsports.com/careers.html">Careers</a>
+		| <a rel="nofollow" href="http://www.internationalallsports.com/careers.html">Careers</a>
 		| <a href="/WhatsNew/default.aspx">What's New</a>
-		| <a href="/whatsnew/bonuses-raf.aspx">Refer a Friend</a>
+		| <a rel="nofollow" href="/whatsnew/bonuses-raf.aspx">Refer a Friend</a>
 				
 		
 			| <a href="/whatsnew/melbourne-cup.aspx">Melbourne Cup</a>		
@@ -229,7 +233,7 @@
 		</p></div>		
 		
 		<div id="title"><p>IASbet.com - Privacy Policy</p></div>
-		<div id="copyright"><p>© Copyright 2008 IASbet Ltd All Rights Reserved | *<a href="/help/company_rules.aspx">General Rules and Conditions Apply</a> </p></div>
+		<div id="copyright"><p>© Copyright 2009 IASbet Ltd All Rights Reserved | *<a href="/help/company_rules.aspx">General Rules and Conditions Apply</a> </p></div>
 		
 	</td>
 <td>
@@ -243,8 +247,8 @@
 </div><!-- end container -->
 
 </div><!-- end pagebox -->
-<!-- 10.1.2.11 / 4.1.71.0 -->
-<script language="javascript" src="/ClientScripts/referdetect.js?ver=4.1.71.0"></script>
+<!-- 10.1.2.11 / 4.1.80.0 -->
+<script language="javascript" src="/ClientScripts/referdetect.js?ver=4.1.80.0"></script>
 <script type="text/javascript">_uacct ='UA-2054181-1';urchinTracker();</script>
 
 
