metoperafamily.org (archived on 2009-06-15)
{
  "alexa_rank": 66645,
  "analysis_subcorpus": true,
  "categories": "business;entertainment",
  "char_count": 6107,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 15.62,
  "homepage_snapshot_redirected_domain": "metoperafamily.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090401032211id_/http://www.metoperafamily.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090401032211id_/http%3A//metoperafamily.org",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "metoperafamily.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090615171708id_/http%3A//www.metoperafamily.org/metopera/utility/privacy.aspx",
  "policy_title": "Privacy Policy",
  "policy_url": "metoperafamily.org/metopera/utility/privacy.aspx",
  "sha1": "aaf7cb8ae8c745239be717e24ad0b27ee56a38b4",
  "simhash": 6598781291980568108,
  "simhash_updated": false,
  "site_hostname": "metoperafamily.org",
  "site_url": "http://metoperafamily.org",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090615171708",
  "word_count": 1024,
  "year": 2009
}

--- a/m/me/met/metoperafamily.org.html
+++ b/m/me/met/metoperafamily.org.html
@@ -1,10 +1,11 @@
-<!--The following is the downloaded HTML source of the metoperafamily.org privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217065152id_/http%3A//www.metoperafamily.org/metopera/utility/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the metoperafamily.org privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615171708id_/http%3A//www.metoperafamily.org/metopera/utility/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head id="ctl00_Head1"><title>
 	Privacy Policy
 </title><meta id="ctl00_metaKeywords" name="keywords" content="The Met Opera;The Metropolitan Opera;"><!-- UCL:HEAD -->
 <!-- META TAGS -->
+<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="imagetoolbar" content="false">
@@ -96,7 +97,7 @@ urchinTracker();
 	<ul id="nav_main">
 		<li id="this_week" class="first "><a href="http://www.metoperafamily.org/metopera/thisweek/">
 			<span>This Week at the Met</span></a></li>
-		<li id="season_ticks" class=""><a href="http://www.metoperafamily.org/metopera/season/index.aspx?nav=top">
+		<li id="season_ticks" class=""><a href="http://www.metoperafamily.org/metopera/season/index.aspx?nav=top"> <!-- Due to season update,the current season is now next season. Can uncomment when presale for 2010-11 is enabled. ">-->
 			<span>Season &amp; Tickets</span></a></li>
 		<li id="watch_listen" class=""><a href="http://www.metoperafamily.org/metopera/broadcast/">
 			<span>Watch &amp; Listen</span></a></li>
@@ -261,7 +262,7 @@ E-mail: <a href="mailto:metinfo@metopera.org"><u>metinfo@metopera.org</u></a>&nb
 	<li><a href="http://www.metoperafamily.org/operanews/">Opera News</a></li>
 </ul>
 <ul id="legal_foot">
-	<li id="copyright">© 2008 The Metropolitan Opera</li>
+	<li id="copyright">© 2009 The Metropolitan Opera</li>
 	<li id="sitemap"><a href="/metopera/utility/sitemap.aspx"><span>Site Map</span></a></li>
 	<li id="terms"><a href="/metopera/utility/terms_conditions.aspx">Terms &amp; Conditions</a></li>
 	<li id="privacy"><a href="/metopera/utility/privacy.aspx">Privacy Policy</a></li>
@@ -270,7 +271,7 @@ E-mail: <a href="mailto:metinfo@metopera.org"><u>metinfo@metopera.org</u></a>&nb
 <!-- // CONTENT BOTTOM -->
 
 
-<!-- This is: METROWEBPW2 -->
+<!-- This is: METROWEBPW3 -->
 
 
 	</div>
