--- a/l/li/lin/link2communion.com.html
+++ b/l/li/lin/link2communion.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the link2communion.com privacy policy that was archived on 2008-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080607002344id_/http%3A//link2communion.com/pages/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the link2communion.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615171838id_/http%3A//link2communion.com/pages/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>
@@ -72,30 +72,25 @@ A:hover {
                 <td height="30" align="center" valign="bottom"><font color="#8F8F8F"><b>Total Affiliates:</b></font></td>
               </tr>
               <tr>
-                <td height="20" align="center">3,373</td>
+                <td height="20" align="center">40,159</td>
               </tr>
               <tr>
                 <td height="20" align="center"><font color="#8F8F8F"><b>Total Debits:</b></font></td>
               </tr>
               <tr>
-                <td height="30" align="center" valign="top">5,702,500.00 $</td>
+                <td height="30" align="center" valign="top">263,010,500.00 $</td>
               </tr>
               <tr>
                 <td><a href="contest.php"><img src="../images/txt1.gif" width="160" height="44" border="0"></a></td>
               </tr>
               <tr>
-                <td height="515" align="center">
-                 <!-- Begin BidVertiser code -->
-<script language="JavaScript1.1" src="http://bdv.bidvertiser.com/BidVertiser.dbm?pid=6598&amp;bid=308692" type="text/javascript"></script>
-<noscript><a href="http://www.bidvertiser.com">marketing</a></noscript>
-<!-- End BidVertiser code --> 
-                </td>
+                <td height="540" align="center" valign="top"><br><br>   <a href="http://e-mailptr.com/ptr/new.php" target="_blank"><img src="http://e-mailptr.com/images/120x600/traffic.jpg" border="0"></a>   </td>
               </tr>
             </tbody></table></td>
             <td width="10">&nbsp;</td>
             <td width="500" align="center" valign="top"><table width="500" border="0" cellspacing="0" cellpadding="0">
               <tbody><tr>
-                <td height="100" align="center"><a href="http://link2communion.com/scripts/runner.php?BA=2&amp;hash=c145bfe5e9ef74bf0393d86754cbae18&amp;url=http%3A%2F%2Fasonewishes.com%2Fpages%2Findex.php%3Frefid%3Dnewis" target="_blank"><img src="http://link2communion.com/scripts/runner.php?REDIRECT=http%3A%2F%2Fe-mailptr.com%2Fimages%2Fasone.gif&amp;hash=d96a35b269abf75f1d3a9d62a014ea64" alt="" border="0"></a><br></td>
+                <td height="120" align="center"><a href="http://link2communion.com/scripts/runner.php?BA=9&amp;hash=4d3320270eef3aff5c5642a57153578e&amp;url=http%3A%2F%2Fexceedmargin.com%2Fpages%2Findex.php%3Frefid%3Dedma" target="_blank"><img src="http://link2communion.com/scripts/runner.php?REDIRECT=http%3A%2F%2Fe-mailptr.com%2Fimages%2Fexceed.gif&amp;hash=8e9cd6e719fabd3abfb57f1af9878aee" alt="" border="0"></a><br></td>
               </tr>
               <tr>
                 <td align="center" valign="top">
