--- a/e/es/esc/escapistmagazine.com.html
+++ b/e/es/esc/escapistmagazine.com.html
@@ -1,15 +1,16 @@
-<!--The following is the downloaded HTML source of the escapistmagazine.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216154513id_/http%3A//www.themis-media.com/content/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the escapistmagazine.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615205101id_/http%3A//www.themis-media.com/content/privacy) for the most accurate reproduction.-->
 
 <html><head>
 		<title>Themis Media : Privacy Policy</title>
+	<meta name="language" content="en">
 	<meta name="description" content="Themis Media">
-	<link href="/rss/news" rel="alternate" type="application/rss+xml" title="News - RSS 2.0">
+	<link href="http://www.themis-media.com/rss/news" rel="alternate" type="application/rss+xml" title="Latest News - RSS 2.0">
 	<link rel="stylesheet" href="http://www.themis-media.com/global/styles/layout/themis-media/styles.css" type="text/css" media="all">
 	<link rel="stylesheet" href="http://www.themis-media.com/themes/default/styles.css" type="text/css" media="screen">
-	<script src="http://ajax.googleapis.com/ajax/libs/prototype/1.6.0.2/prototype.js" type="text/javascript"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.1/scriptaculous.js" type="text/javascript"></script>
-	<script src="http://www.themis-media.com/global/js/formatDate.js" type="text/javascript"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/prototype/1.6.0.3/prototype.js" type="text/javascript"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.2/scriptaculous.js" type="text/javascript"></script>
+	<script src="http://www.themis-media.com/global/js/formatDate_1.1.js" type="text/javascript"></script>
 	<script src="http://www.themis-media.com/global/js/general.js" type="text/javascript"></script>
 	<script src="http://www.themis-media.com/global/js/dropdown.js" type="text/javascript"></script>
 	<script src="http://www.themis-media.com/global/js/tooltips_1.1.js" type="text/javascript"></script>
@@ -85,4 +86,4 @@
 
 
 
-<div style="font-size: 10px;" align="center">© 2008 Themis Media, a division of <a href="http://www.themis-group.com/" target="new">Themis Group, Inc.</a><br>&nbsp;</div></div></body></html>
+<div style="font-size: 10px;" align="center">© 2009 Themis Media, a division of <a href="http://www.themis-group.com/" target="new">Themis Group, Inc.</a><br>&nbsp;</div></div></body></html>
