--- a/s/st/sto/stonetemple.com.html
+++ b/s/st/sto/stonetemple.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the stonetemple.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216051727id_/http%3A//www.stonetemple.com/STC_Privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stonetemple.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615221254id_/http%3A//www.stonetemple.com/STC_Privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<title>Stone Temple Consulting Privacy Policy</title>
@@ -74,10 +74,10 @@
 <li><a href="http://www.stonetemple.com/STC_Articles.shtml">Articles</a></li>
 <li><a href="http://www.stonetemple.com/blog">Blog</a></li>
 <li><a href="http://www.stonetemple.com/Podcasts.shtml">Podcasts</a></li>
+<li><a href="http://www.stonetemple.com/STC_Presentations.shtml">Presentations</a></li>
 <li><a href="http://www.stonetemple.com/STC_Contact.shtml">Contact</a></li>
 </ul>
 </div>
-
 
 <div id="contact">
 <p><strong>For more information on Web Marketing Services, contact us at:</strong><br><br>
@@ -100,13 +100,14 @@ Stone Temple Consulting<br>
 <a href="http://www.stonetemple.com/STC_CaseStudies.shtml"><strong>Case Studies</strong></a>
 </p>
 <p>
-<a href="http://www.stonetemple.com/STC_Articles.shtml"><strong>Articles</strong></a> - 
-<a href="http://www.stonetemple.com/blog"><strong>Blog</strong></a> - 
-<a href="http://www.stonetemple.com/Podcasts.shtml"><strong>Podcasts</strong></a> - 
+<a href="http://www.stonetemple.com/STC_Articles.shtml"><strong>SEO Articles</strong></a> - 
+<a href="http://www.stonetemple.com/blog"><strong>SEO Blog</strong></a> - 
+<a href="http://www.stonetemple.com/Podcasts.shtml"><strong>SEO Podcasts</strong></a> - 
+<a href="http://www.stonetemple.com/STC_Presentations.shtml"><strong>SEO Presentations</strong></a> - 
 <a href="http://www.stonetemple.com/STC_Contact.shtml"><strong>Contact</strong></a> - 
 <a href="http://www.stonetemple.com/STC_Privacy.shtml"><strong>Privacy</strong></a>
 </p>
-<p>Copyright © Stone Temple Consulting 2001-2008.</p>
+<p>Copyright © Stone Temple Consulting 2001-2009.</p>
   <p>
     <a href="http://validator.w3.org/check?uri=referer">
 	<img style="border:0;width:88px;height:31px" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88">
