bearshare.com (archived on 2009-06-15)
{
  "alexa_rank": 800,
  "analysis_subcorpus": false,
  "categories": "uncategorized",
  "char_count": 21772,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.74,
  "homepage_snapshot_redirected_domain": "bearshare.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090331154345id_/http://www.bearshare.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090331154345id_/http%3A//bearshare.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "bearshare.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090615222948id_/http%3A//www.bearshare.com/privacypolicy.shtml",
  "policy_title": "Privacy Policy",
  "policy_url": "bearshare.com/privacypolicy.shtml",
  "sha1": "c7f6377f27b4532a013bb01bbaedeb739929b4e9",
  "simhash": 17173631011258527805,
  "simhash_updated": true,
  "site_hostname": "bearshare.com",
  "site_url": "http://bearshare.com",
  "smog": 16.36,
  "strict_updated": true,
  "timestamp": "20090615222948",
  "word_count": 3460,
  "year": 2009
}

--- a/b/be/bea/bearshare.com.html
+++ b/b/be/bea/bearshare.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bearshare.com privacy policy that was archived on 2008-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081226031240id_/http%3A//www.bearshare.com/privacypolicy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bearshare.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615222948id_/http%3A//www.bearshare.com/privacypolicy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="eng" lang="eng"><head>
 		<title>Privacy Policy</title>
@@ -20,7 +20,7 @@
 			-->
 		</style>
 		<script src="/js/mediateGA.js" type="text/javascript"></script>
-		<script type="text/javascript">_uacct = "UA-342615-1";callGA();</script>
+		<script type="text/javascript">callGA();</script>
 			<script language="javascript" src="/js/general7.js" type="text/javascript"></script>
 	<script language="javascript" type="text/javascript">
 			window.onload = function ()
@@ -69,7 +69,7 @@
 									<table cellspacing="0" cellpadding="0" border="0" style="width:100%;height:36px;border:">
 										<tbody><tr>
 											<td class="topMenu">
-												<a href="http://download.bearshare.com/BearShareV7.exe" rel="nofollow" onclick="javascript:location=this.href;callGA('/download/en/menu');return false;">Download</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+												<a href="http://download.bearshare.com/BearShareV8.exe" rel="nofollow" onclick="javascript:location=this.href;callGA('/download/en/menu');return false;">Download</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 												<a href="/support/" rel="nofollow">Support</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 												<a href="http://wa.bearshare.com/support/feedback/" rel="nofollow" target="_blank">Contact</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 												<a href="/">Home</a>
@@ -185,7 +185,7 @@
 									<img src="/bearshare-free-music-downloads-images/downloadBGL.gif" width="34" height="43" style="vertical-align:bottom;" border="0" alt="">
 								</td>
 								<td style="background-color:#ffcc00;border-top:1px solid #d6ab00;">
-									<a href="http://download.bearshare.com/BearShareV7.exe" rel="nofollow" onclick="javascript:location=this.href;callGA('/download/en/smallBtn');return false;" title="Click here to download BearShare!"><img src="/bearshare-free-music-downloads-images/downloadSmall.gif" width="192" height="24" style="vertical-align:bottom;" border="0" alt="Click here to download BearShare!"></a>
+									<a href="http://download.bearshare.com/BearShareV8.exe" rel="nofollow" onclick="javascript:location=this.href;callGA('/download/en/smallBtn');return false;" title="Click here to download BearShare!"><img src="/bearshare-free-music-downloads-images/downloadSmall2.gif" width="192" height="24" style="vertical-align:bottom;" border="0" alt="Click here to download BearShare!"></a>
 								</td>
 								<td style="background-color:#ffffff;">
 									<img src="/bearshare-free-music-downloads-images/downloadBGR.gif" width="34" height="43" style="vertical-align:bottom;" border="0" alt="">
