pign.net (archived on 2009-06-16)
{
  "alexa_rank": 99980,
  "analysis_subcorpus": true,
  "categories": "",
  "char_count": 2827,
  "classifier_probability": 0.76,
  "cross_domain_homepage_redir": false,
  "flesch_ease": null,
  "flesch_kincaid": NaN,
  "homepage_snapshot_redirected_domain": "pign.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090402040225id_/http://pign.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090402040225id_/http%3A//pign.net",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "pign.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616002936id_/http%3A//pign.net/privacy.html",
  "policy_title": null,
  "policy_url": "pign.net/privacy.html",
  "sha1": "d3d4d04d9757552c7c9f2728f2b58c5019ff2f6b",
  "simhash": 11078158063691841676,
  "simhash_updated": false,
  "site_hostname": "pign.net",
  "site_url": "http://pign.net",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090616002936",
  "word_count": 470,
  "year": 2009
}

--- a/p/pi/pig/pign.net.html
+++ b/p/pi/pig/pign.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pign.net privacy policy that was archived on 2008-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081219003547id_/http%3A//www.pign.net/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pign.net privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616002936id_/http%3A//pign.net/privacy.html) for the most accurate reproduction.-->
 
 <html><head></head><body bgcolor="#C7DB91">
 <center><h1>Privacy Policy</h1></center>
