--- a/s/sp/spe/spells4free.com.html
+++ b/s/sp/spe/spells4free.com.html
@@ -1,38 +1,52 @@
-<!--The following is the downloaded HTML source of the spells4free.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216011515id_/http%3A//www.spells4free.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the spells4free.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616050802id_/http%3A//www.spells4free.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<meta name="DESCRIPTION" content="Love spells Free spells for love money revenge luck cast a spell casters psychics wiccan for witch craft witchcraft to voodoo love spells articles powerful guaranteed free white magick spells">
-<meta name="KEYWORDS" content=" spells, love spells, magic spells, wicca, wiccan, cast a spell, witchcraft, free spells, free love spells, voodoo spells, magick, black magic, articles">
-<title>Love Spells black magic spell white magick powerful voodoo wiccan money witchcraft wicca free spells</title>
+<meta name="DESCRIPTION" content="SPELL 4 FREE: THE MAGICK PLACE TO BE! Powerful spells cast by me for free. Choose between many types: Free Love spells Free easy spells spell casters wiccan to voodoo love spells powerful guaranteed free white magick spells and black magic spells or wicca">
+<meta name="KEYWORDS" content=" love spells, spells, magic spells, wicca spells, wiccan spells, free spells, free love spells, voodoo spells, easy love spells, black magic spells">
+<title>Love Spells black magic spell white magick powerful voodoo wiccan wicca free easy spells</title>
 <link rel="Stylesheet" href="http://www.spells4free.com/mainstyle.css" type="text/css" media="screen">
+
 </head>
 <body>
 
-<div align="center">
+<div align="center"> <a href="http://www.spells4free.com">love spells</a>
+<a href="http://www.spells4free.com/freespellscast.html">free spells</a>
 
+<a href="http://www.spells4free.com/freelovespellsmailinglist.html">free love spells</a> <br>
+<script type="text/javascript"><!--
+google_ad_client = "pub-4738201441975591";
+/* 468x15, created 19/05/09 */
+google_ad_slot = "0593695335";
+google_ad_width = 468;
+google_ad_height = 15;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script><br>
 <table class="maintable" cellspacing="0" cellpadding="0" width="800">
 
 <tbody><tr>
 <td bgcolor="#000000" colspan="0"><a href="http://www.spells4free.com">
 
-<img border="0" src="http://www.spells4free.com/images/spells4freeheader.jpg">
+<img border="0" src="http://www.spells4free.com/images/spells4freeheader.jpg" alt="spells" width="902" height="209">
 
 </a></td>
 <td background="http://www.spells4free.com/images/bg123.jpg" colspan="1"></td>
 </tr>
 
-<tr><td align="left" bgcolor="#666699"><font color="white">READ MY BLOG  <a href="/freelovespellsblog"><font color="#E6CFFF">NOW!</font></a> | LEARN HOW TO CAST A SPELL <a style="text-decoration:none" onmouseover="window.status='Click for details.';return true" onmouseout="window.status='';return true" target="_new" href="http://sorete.witch.hop.clickbank.net"><font color="#E6CFFF">CLICK HERE!</font></a>
+<tr><td align="left" bgcolor="#666699"><font color="white"><a href="/bestlovepsychicspellscastersreviews.html" target="_blank"><font color="#E6CFFF">BEST SPELL CASTERS REVIEWS</font></a> | <font color="white"><a href="/freelovespellsblog" target="_blank"><font color="#E6CFFF">READ MY BLOG</font></a> NOW!
 
-| SIGN UP FOR THE NEWSLETTER <a href="/freelovespellsmailinglist.html"><font color="#E6CFFF">LEARN MORE!</font></a> | GET <a href="/freespellscast.html"><font color="#E6CFFF">FREE SPELLS</font></a> CAST BY ME!
+| SIGN UP FOR <a href="/freelovespellsmailinglist.html" target="_blank"><font color="#E6CFFF">THE NEWSLETTER!</font></a> | GET <a href="/freespellscast.html" target="_blank"><font color="#E6CFFF">FREE SPELLS</font></a> CAST BY ME!
 
 
-</font></td>
-<form name="search" method="post" action="http://www.spells4free.com/indexser.php"></form>
-<td class="topnav" colspan="2" bgcolor="#666699"> <b>Search:</b>
-<input type="text" name="search" value="" size="12" style="font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 11px; color: #333333; border: 1px solid #C0C0C0">
+</font></font></td><form name="search" method="post" action="http://www.spells4free.com/indexser.php"></form>
+
+<td class="topnav" colspan="2" bgcolor="#666699"> <b>Search</b>
+
+<input type="text" name="search" value="" size="12" style="font-family: Verdana, Arial, Helvetica, sans color: #333333;-serif; font-size: 11px; border: 1px solid #C0C0C0">
 <input style="FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif; FONT-SIZE: 9pt; PADDING: 1px; BORDER-RIGHT: #C0C0C0 1px solid; BORDER-TOP: #C0C0C0 1px solid; BORDER-LEFT: #C0C0C0 1px solid; BORDER-BOTTOM: #C0C0C0 1px solid" type="submit" value="GO"> </td>
 
 </tr>
@@ -108,7 +122,30 @@ We will let our Visitors and Authorized Customers know about changes to our priv
 </td> <!-- End of Main Content -->
 <td class="navcell"> <!-- Starting of Navigator -->
 
-<div class="rightnavbox"><a href="http://www.spells4free.com/signup.php">Sign Up</a> to start posting your Spells or
+<div class="spacer"></div>
+<div class="rightnavbox">
+<b>
+FREE RESOURCES:</b><br>
+<a href="http://animalreadings.info/"><font color="#8080FF">Free READINGS</font></a><font color="#8080FF"><br>
+
+<a href="http://www.spells4free.com/freelovespellsmailinglist.html"><font color="#8080FF">Free powerful Love Spell</font></a><font color="#8080FF"><br>
+<a href="http://www.spells4free.com/freespellscast.html"><font color="#8080FF">FREE SPELLS CAST by me</font></a><font color="#8080FF"><br>
+
+
+<a href="http://www.spells4free.com/luckcalculator.html"><font color="#8080FF">Check your LUCK</font></a><font color="#8080FF"><br>
+<a href="http://www.spells4free.com/onlinetarotcardsreadings.html"><font color="#8080FF">Tarot Card Readings</font></a><font color="#8080FF"><br>
+<a href="http://www.spells4free.com/freedailyhoroscopes"><font color="#8080FF">Free Daily Horoscope</font></a><font color="#8080FF"><br>
+
+<p>
+
+</p></font></font></font></font></font></font></div><font color="#8080FF"><font color="#8080FF"><font color="#8080FF"><br>
+
+
+<div class="rightnavbox">
+
+<b>
+SIGN UP HERE TO POST:</b><br>
+<a href="http://www.spells4free.com/signup.php">Sign Up</a> to start posting your Spells or
 	<a href="http://www.spells4free.com/learnmore.php">learn more</a>.</div>
 
 
@@ -130,8 +167,8 @@ We will let our Visitors and Authorized Customers know about changes to our priv
 <div class="rightnavbox">
 
 <a href="http://www.spells4free.com/freelovespellsblog">Blog about spells</a><br>
-<a href="http://www.spells4free.com/freespellscast.php">FREE SPELLS cast by me</a><br>
-<a href="http://www.spells4free.com/freelovespellsmailinglist.php">Newsletter</a><br>
+<a href="http://www.spells4free.com/freespellscast.html">FREE SPELLS cast by me</a><br>
+<a href="http://www.spells4free.com/freelovespellsmailinglist.html">Newsletter</a><br>
 <a href="http://www.spells4free.com/aboutus.php">About Us</a><br>
 <a href="http://www.spells4free.com/linkus.php">Links and LinkExchange</a><br>
 <a href="http://www.spells4free.com/contacts.php">Contact Us</a><br>
@@ -153,23 +190,7 @@ We will let our Visitors and Authorized Customers know about changes to our priv
 
 
 
-<div class="spacer"></div>
-<div class="rightnavbox">
-<b>
-FREE RESOURCES:</b><br>
-<a href="http://animalreadings.info/"><font color="#8080FF">Free READINGS</font></a><font color="#8080FF"><br>
 
-<a href="http://www.spells4free.com/freelovespellsmailinglist.html"><font color="#8080FF">Free powerful Love Spell</font></a><font color="#8080FF"><br>
-<a href="http://www.spells4free.com/freespellscast.html"><font color="#8080FF">FREE SPELLS CAST by me</font></a><font color="#8080FF"><br>
-
-
-<a href="http://www.spells4free.com/luckcalculator.html"><font color="#8080FF">Check your LUCK</font></a><font color="#8080FF"><br>
-<a href="http://www.spells4free.com/onlinetarotcardsreadings.html"><font color="#8080FF">Tarot Card Readings</font></a><font color="#8080FF"><br>
-<a href="http://www.spells4free.com/freedailyhoroscopes"><font color="#8080FF">Free Daily Horoscope</font></a><font color="#8080FF"><br>
-
-<p>
-
-</p></font></font></font></font></font></font></div><font color="#8080FF"><font color="#8080FF"><font color="#8080FF">
 
 
 
@@ -186,18 +207,23 @@ FREE RESOURCES:</b><br>
 <div style="width: 150; height: 120; border-style: solid; border-width: 3; padding-left: 1; padding-right: 1; padding-top: 1; padding-bottom: 1; border-color: #D9B7FF">
 <font size="2" color="#C495FF">
 WEBMASTERS LOOK HERE!<br>
-Want the Luck calculator on your site? Want to do linkexchange? <a href="linkus.php">Click here to read more
-</a></font></div><font size="2" color="#C495FF"><a href="linkus.php">
+Want the Luck calculator on your site? Want to do linkexchange? <a href="http://www.spells4free.com/linkus.php">Click here to read more
+</a></font></div><font size="2" color="#C495FF"><a href="http://www.spells4free.com/linkus.php">
 
 
 
-</a></font></center></div><font size="2" color="#C495FF"><a href="linkus.php">
+</a></font></center></div><font size="2" color="#C495FF"><a href="http://www.spells4free.com/linkus.php">
 <br><br>
-<center><script type="text/javascript" language="JavaScript" src="http://xslt.alexa.com/site_stats/js/t/b?url=http%3A%2F%2Fwww.spells4free.com"></script>
+</a><center><a href="http://www.spells4free.com/linkus.php"><script type="text/javascript" language="JavaScript" src="http://xslt.alexa.com/site_stats/js/t/b?url=http%3A%2F%2Fwww.spells4free.com"></script>
+
+<br><br>
+
+<!-- Facebook Badge START --></a><a href="http://www.facebook.com/people/Doris-Lovespells/1333035239" title="Doris Lovespells's Facebook profile" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal;font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;">Doris Lovespells's Profile</a><br><a href="http://www.facebook.com/people/Doris-Lovespells/1333035239" title="Doris Lovespells's Facebook profile" target="_TOP"><img src="http://badge.facebook.com/badge/1333035239.318.914092769.png" alt="Doris Lovespells's Facebook profile" style="border: 0px;" width="120" height="285"></a><br><a href="http://www.facebook.com/badges.php" title="Make your own badge!" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal;font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;">Create Your Badge</a><!-- Facebook Badge END -->
 </center>
 
 
-</a></font></font></font></font></td> <!-- End of Navigator -->
+
+</font></font></font></font></td> <!-- End of Navigator -->
 </tr>
 <tr>
 <td colspan="2" align="right" bgcolor="#666699"><font color="white">
@@ -228,7 +254,7 @@ var cntvisible = "yes"; // do you want counter visible yes/no?
 </tr>
 </tbody></table>
 </div>
-
+<center>
 <a href="http://horoscopovirgo.spaces.live.com">horoscopo virgo</a>
 
 <a href="http://www.spells4free.com/freespellscast.html">free spells</a>
@@ -236,8 +262,9 @@ var cntvisible = "yes"; // do you want counter visible yes/no?
 <a href="http://www.spells4free.com/freelovespellsmailinglist.html">free love spells</a>
 
 <a href="http://www.spells4free.com/luckcalculator.php">luck</a>
-<a href="http://www.spells4free.com/Article/Law-of-attraction-book/2427">Manifest a miracle</a>
-
+<a href="http://divinelovespells.blogspot.com">divinelovespells</a>
+<a href="http://www.spells4free.com/Article/Divinelovespells-com/8951">divine love spells</a>
+</center>
 
 
 
