--- a/p/pr/pri/printfree.com.html
+++ b/p/pr/pri/printfree.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the printfree.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216012635id_/http%3A//www.printfree.com/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the printfree.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616051546id_/http%3A//printfree.com/privacy_policy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -17,107 +17,91 @@
 		<td valign="top" width="9%">
 		<table cellspacing="0" cellpadding="0" width="72" border="0">
 			<tbody><tr>
-				<td width="100%" bgcolor="#e4e4e4">
-				<font face="MS Sans Serif" color="#003366" size="1">
-				<a href="index.htm">Printfree.com Home</a></font><font face="MS Sans Serif" color="#000000" size="1">&nbsp;&nbsp;
-				<br>
+				<td width="100%" bgcolor="#e4e4e4"><b>
+				<font face="Arial" color="#003366" size="1">
+				<a href="index.htm">Printfree.com </a></font>
+				<a href="index.htm">
+				<font face="Arial" style="font-size: 9pt">Home</font></a><font face="Arial" color="#0000FF" style="font-size: 9pt">
+				</font><font face="Arial" color="#000000" size="1">&nbsp; <br>
 				<a href="Site_Map.htm">Site Map<br>
 				&amp; Guide</a>&nbsp;<br>
-				</font><font face="MS Sans Serif" size="1">
+				</font><font face="Arial" size="1">
 				<a href="tips_on_printing.htm">Tips on <br>
-				Printing </a></font>
-				<font face="MS Sans Serif" color="#000000" size="1"><br>
+				Printing </a></font><font face="Arial" color="#000000" size="1">
+				<br>
 				<a href="privacy_policy.htm">Privacy</a> <br>
-&nbsp; </font></td>
+&nbsp; </font></b></td>
 			</tr>
 			<tr>
-				<td width="100%" bgcolor="#fffec4">
-				<font face="MS Sans Serif" color="#000000" size="1">
+				<td width="100%" bgcolor="#fffec4"><b>
+				<font face="Arial" color="#000000" size="1">
 				<a href="printable_greeting_cards.htm">Greeting<br>
 				Cards</a><br>
-				&nbsp;<br>
 				<a href="holidays.htm">Holidays</a>&nbsp; <br>
-&nbsp; </font></td>
+&nbsp; </font></b></td>
 			</tr>
 			<tr>
-				<td width="100%" bgcolor="#FFFFFF">
-	<b><font color="#008000" face="MS Sans Serif" size="1">Christmas
-	</font><font color="#FF0000" face="MS Sans Serif" size="1"><br>
-	</font></b>
-						<font face="MS Sans Serif" size="1">
-						<font color="#008000">
-				<a href="Holidays/Christmas.htm"><font color="#008000">Flyers 
-				&amp; Prints</font></a> <br>
-				Cards <br>
-						<a href="printable_christmas_cards.htm">
-						<font color="#008000">Page 01</font></a>&nbsp; <br>
-				</font>
-						<a href="printable_christmas_cards02.htm">
-						<font color="#008000">Page 02</font></a><font color="#008000">&nbsp;
-						<br>
-						</font>
-						<a href="printable_christmas_cards03.htm">
-						<font color="#008000">Page 03</font></a><font color="#008000">&nbsp;
-						<br>
-						</font>
-						<a href="printable_christmas_cards04.htm">
-						<font color="#008000">Page 04</font></a><font color="#008000">&nbsp;
-						<br>
-						</font>
-						<a href="printable_christmas_cards05.htm">
-						<font color="#008000">Page 05 </font> </a>
-						<font color="#008000">&nbsp;<br>
-	</font><a href="Holidays/AfterChristmas.htm"><font color="#008000">After Christmas 
-						Thank You </font> </a><font color="#008000"><br>
-				<a href="Holidays/HanukkahChanukah.htm">
-				<font color="#008000">Hanukkah &amp; Chanukah</font></a> <br>
-	<a href="Holidays/HappyNewYear.htm"><font color="#000000">Happy <br>
-	New Year </font></a> <br>
-&nbsp;&nbsp;
-	</font>
-						</font></td>
+				<td width="100%" bgcolor="#FFFFFF"><b>
+				<font face="Arial" size="2" color="#000080">Father's <br>
+				Day </font><font face="Arial" size="1"><font color="#000080">
+				<br>
+				</font><a href="printable_fathers_day_cards.htm">
+				<font color="#000080">Cards 01</font></a><font color="#000080">
+				<br>
+				</font><a href="printable_fathers_day_cards02.htm">
+				<font color="#000080">Cards 02</font></a><font color="#000080">
+				<br>
+				</font><font color="#800080">
+				<a href="printable_fathers_day_cards03.htm">
+				<font color="#000080">Cards 03</font></a></font><font color="#000080"> <br>
+				</font><font color="#800080">
+				<a href="printable_fathers_day_cards04.htm">
+				<font color="#000080">Cards 04</font></a></font><font color="#000080"> <br>
+				</font><a href="Holidays/FathersDay.htm">
+				<font color="#000080">Flyers, Prints,<br>
+				&amp; Coloring</font></a><font color="#000080"> <br>
+&nbsp;</font></font></b></td>
 			</tr>
 			<tr>
-				<td width="100%" bgcolor="#cde3fe">
-				<font face="MS Sans Serif" color="#000000" size="1">
+				<td width="100%" bgcolor="#cde3fe"><b>
+				<font face="Arial" color="#000000" size="1">
 				<a href="office_printables.htm">Office<br>
 				Forms &amp;<br>
 				Flyers</a> <br>
 				<a href="Calendars.htm">Calendars</a> <br>
 				<a href="Calendars.htm">Monthly </a><br>
 				<a href="Calendars_Customizable_Monthly.htm">Customizable</a><br>
-				<a href="CalendarsPrintableYearly.htm">Yearly</a> <br>
-				<a href="Picture_Calendars_08/AmericaIsBeautiful.htm">Picture 
-				2008</a> <br>
+				<a href="CalendarsPrintableYearly.htm">Yearly</a>&nbsp; <br>
 				<a href="Picture_Calendars_09/PictureCalendarsMix.htm">
 				Picture 2009</a> <br>
 				<a href="School_Printables.htm">School</a> <br>
 				<a href="School_Printables.htm">Items</a> <br>
 				<a href="printable_signs.htm">Signs</a> <br>
 				<a href="Business_Cards.htm">Business <br>
-				Cards</a>&nbsp;&nbsp;&nbsp; </font></td>
+				Cards</a>&nbsp;&nbsp;&nbsp; </font></b></td>
 			</tr>
 			<tr>
-				<td width="100%" bgcolor="#FFFFFF">
-				<font face="MS Sans Serif" size="1">
+				<td width="100%" bgcolor="#FFFFFF"><b>
+				<font face="Arial" size="1">
 				<a href="Coloring_Book_Pages.htm">Coloring <br>
 				Book Pages </a><br>
 				<a href="coloring_pages/Animals.htm">Animals</a> <br>
 				<a href="coloring_pages/machinery.htm">Machinery</a> <br>
-				<a href="coloring_pages/Plants.htm">Plants </a></font></td>
+				<a href="coloring_pages/Plants.htm">Plants </a></font></b>
+				</td>
 			</tr>
 			<tr>
-				<td width="100%" bgcolor="#f4ffce">
-				<font face="MS Sans Serif" size="1" color="#000000">
+				<td width="100%" bgcolor="#f4ffce"><b>
+				<font face="Arial" size="1" color="#000000">
 				<a href="Pictures_prints/CustomizablePrintsOne.htm">
 				Customizable<br>
 				Pictures <br>
 				and Prints</a> <br>
-&nbsp; </font></td>
+&nbsp; </font></b></td>
 			</tr>
 			<tr>
-				<td width="100%" bgcolor="#e4e4e4">
-				<font face="MS Sans Serif" color="#000000" size="1">
+				<td width="100%" bgcolor="#e4e4e4"><b>
+				<font face="Arial" color="#000000" size="1">
 				<a href="feedbacka_page.htm">Feedback</a><br>
 				<br>
 				<a href="Press_Releases/AboutUs.htm">About Us</a><br>
@@ -127,7 +111,7 @@
 				<br>
 				<a href="privacy_policy.htm">Privacy<br>
 				Policy</a> <br>
-&nbsp;</font></td>
+&nbsp;</font></b></td>
 			</tr>
 		</tbody></table>
 		</td>
@@ -143,7 +127,7 @@ Privacy Policy&nbsp;&nbsp;</b></font><font face="Arial" size="2"><br>
 
 
 
-<font face="MS Sans Serif" size="2">We at Printfree.com respect your right to
+<b><font face="Arial" size="1">We at Printfree.com respect your right to
 privacy.<br>
 &nbsp;<br>
 We do not collect and sell your personal information&nbsp;<br>
@@ -182,8 +166,29 @@ you to delete Temporary Internet files, cookies, history, form data and more.
 <br>
 For more detailed instructions, use the help section for your web browser. <br>
 <br>
+&nbsp;Addition 03-20-2009 as per Google Adsense program. <br>
+&nbsp;Your posted privacy policy should include the following information about 
+Google and the <a href="http://www.doubleclick.com/privacy/faq.aspx">DoubleClick 
+DART cookie</a>:</font></b></p><ul>
+	<li><b><font face="Arial" size="1">Google, as a third party vendor, uses 
+	cookies to serve ads on your site. </font></b></li>
+	<li><b><font face="Arial" size="1">Google's use of the DART cookie enables 
+	it to serve ads to your users based on their visit to your sites and other 
+	sites on the Internet. </font></b></li>
+	<li><b><font face="Arial" size="1">Users may opt out of the use of the DART 
+	cookie by visiting the <a href="http://www.google.com/privacy_ads.html">
+	Google ad and content network privacy policy</a>. </font></b></li>
+</ul>
+<p><b><font face="Arial" size="1">
+<br>
 Thank you for visiting, now you can relax and enjoy this site as it was
 intended!<br>
+</font></b>
+
+
+
+
+<font face="MS Sans Serif" size="2">
 <br>
 <br>
 </font>
@@ -194,7 +199,9 @@ _uacct = "UA-3981888-1";
 urchinTracker();
 </script>
 
-<!--msnavigation--></p></td></tr><!--msnavigation--></tbody></table>
+</p>
+
+<!--msnavigation--></td></tr><!--msnavigation--></tbody></table>
 
 
 
