--- a/a/ad/adt/adtoll.com.html
+++ b/a/ad/adt/adtoll.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the adtoll.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216001549id_/http%3A//www.adtoll.com/privacy_statement) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the adtoll.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616054459id_/http%3A//www.adtoll.com/privacy_statement) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html dir="LTR" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -8,13 +8,33 @@
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body marginwidth="0" marginheight="0" topmargin="0" bottommargin="0" leftmargin="0" rightmargin="0">
-	<table border="0" cellspacing="0" cellpadding="0" align="center">
+<style> 
+#at_stripe { background: #CDD904; border-bottom: 1px solid #99A202; margin: 0 0 3px 0; padding: 4px 0; z-index: 100; top: 0; left: 0; width: 100%; overflow: auto; position: fixed; }
+#at_stripe .powered { float: left; text-align: left; font-family: Arial,Sans-Serif; font-size: 10px; font-weight: normal; font-style: normal; color: #5F6601; width:120px;}
+#at_stripe .left { float: left; text-align: center; font-family: Arial,Sans-Serif; font-weight: bold; font-style: normal;  width:78%;}
+#at_stripe .right { font-family: Arial,Sans-Serif; float: right; text-align: right; font-weight: normal; font-size: 10px;letter-spacing: 0; width: 150px; white-space: nowrap;}
+#at_stripe .left a {font-size: 12px; color: #5F6601; text-decoration: none;}
+#at_stripe .left a:hover {font-size: 12px; color: #A8B606; text-decoration: underline;}
+#at_stripe .right a {font-size: 10px; color: #5F6601; text-decoration: none;}
+#at_stripe .right a:hover {font-size: 10px; color: #A8B606; text-decoration: underline;}
+#at_stripe .powered a {font-size: 10px; color: #5F6601; text-decoration: none;}
+#at_stripe .powered a:hover {font-size: 10px; color: #A8B606; text-decoration: underline;}
+</style>
+<script type="text/javascript">
+adtoll_see_your_ad_here = 1;
+adtoll_your_text = "Advertise here";
+adtoll_show_powered_by = 1;
+</script>
+<script src="http://adserve.adtoll.com/js/at_ag_34471.js" type="text/javascript"></script>
+
+
+<table border="0" cellspacing="0" cellpadding="0" align="center">
  <tbody><tr><td valign="top">
  <table border="0" cellspacing="0" cellpadding="0" width="751" align="center">
   <tbody><tr><td valign="top">
        <table border="0" cellspacing="0" cellpadding="0">
 	    <tbody><tr><td width="525" class="smallText">
-<a href="http://www.adtoll.com"><img src="/images/logo.gif" width="524" height="79" border="0" alt="AdToll - Your Tollgate to Web Traffic" title="AdToll - Your Tollgate to Web Traffic"></a>
+		<a href="http://www.adtoll.com"><img src="/images/logo.gif" width="524" height="79" border="0" alt="AdToll - Your Tollgate to Web Traffic" title="AdToll - Your Tollgate to Web Traffic"></a>
 	    </td>
 			<td width="225" align="right">
 			 <table border="0" cellspacing="0" cellpadding="0">
@@ -23,25 +43,23 @@
 			       <table border="0" cellspacing="0" cellpadding="0">
 				    <tbody><tr><td width="66" align="center"><img src="images/m02.gif" border="0" alt="Shopping Cart" title=" Shopping Cart " width="66" height="65"></td>
 					    <td width="139" height="65" class="bg"><br style="line-height:20px;"><span class="tx">Shopping Cart:</span><br><img src="/images/pixel_trans.gif" height="5"><br>
-						                <a class="ml" href="https://www.adtoll.com/shopping_cart.php">1 ad in your cart</a></td></tr>
-				   </tbody></table>
+Your cart is empty.				   </td></tr></tbody></table>
 			  </td></tr>
 			  <tr><td height="29"></td></tr>
 			 </tbody></table>
 		</td></tr>
 	   </tbody></table>
        <table border="0" cellspacing="0" cellpadding="0">
-	    <tbody><tr><td class="smalltext">
-	    
-<a href="http://www.adtoll.com"><img src="/images/m04.gif" border="0" alt="AdToll" title="AdToll" width="151" height="36"></a><a href="http://www.adtoll.com/advertisers_faq"><img src="/images/m05.gif" border="0" alt="Advertisers" title="Advertisers" width="150" height="36"></a><a href="http://www.adtoll.com/publishers_faq"><img src="/images/m06.gif" border="0" alt="Publishers" title="Publishers" width="151" height="36"></a><a href="http://www.adtoll.com/account"><img src="/images/m07.gif" border="0" alt="My Account" title="My Account" width="150" height="36"></a><a href="http://www.adtoll.com/help"><img src="/images/m08.gif" border="0" alt="Help" title="Help" width="148" height="36"></a>
+	    <tbody><tr><td class="smalltext">  
+	<a href="http://www.adtoll.com"><img src="/images/m04.gif" border="0" alt="AdToll" title="AdToll" width="151" height="36"></a><a href="http://www.adtoll.com/advertisers_faq"><img src="/images/m05.gif" border="0" alt="Advertisers" title="Advertisers" width="150" height="36"></a><a href="http://www.adtoll.com/publishers_faq"><img src="/images/m06.gif" border="0" alt="Publishers" title="Publishers" width="151" height="36"></a><a href="http://www.adtoll.com/account"><img src="/images/m07.gif" border="0" alt="My Account" title="My Account" width="150" height="36"></a><a href="http://www.adtoll.com/help"><img src="/images/m08.gif" border="0" alt="Help" title="Help" width="148" height="36"></a>
 
 	    </td></tr>
 	    
 	    <tr><td>
-	    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-<tbody><tr><td height="8" colspan="3"></td></tr>
-<tr><td align="left" width="6"><img src="images/m12.gif" border="0" alt="" width="6" height="20"></td>
-	<td height="20" bgcolor="EBEBEB" align="left" style="padding-left:10px" class="smallText">
+	    	<table cellpadding="0" cellspacing="0" border="0" width="100%">
+		<tbody><tr><td height="8" colspan="3"></td></tr>
+		<tr><td align="left" width="6"><img src="images/m12.gif" border="0" alt="" width="6" height="20"></td>
+		<td height="20" bgcolor="EBEBEB" align="left" style="padding-left:10px" class="smallText">
 	
 		<a href="http://www.adtoll.com/index.php">Home</a> - Privacy Statement		
 	</td>
@@ -55,13 +73,7 @@
 	</td></tr>	    
 
 	   </tbody></table>	
-
-
-
-
-
   </td></tr>
-
  <tr><td valign="top">
        <table border="0" cellspacing="0" cellpadding="0" width="100%">
 	    <tbody><tr><td width="100%" valign="top">
@@ -208,8 +220,7 @@ ADTOLL.COM LLC Privacy Statement October 2008.
 <script type="text/javascript">
 _uacct = "UA-1405533-3";
 urchinTracker();
-</script>
-<!-- footer_eof //-->
+</script><!-- footer_eof //-->
 
 
 
