jwatch.org (archived on 2009-06-16)
{
  "alexa_rank": 70735,
  "analysis_subcorpus": true,
  "categories": "education;health",
  "char_count": 7435,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.63,
  "homepage_snapshot_redirected_domain": "jwatch.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090221134635id_/http://jwatch.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090221134635id_/http%3A//jwatch.org",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "jwatch.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090616060721id_/http%3A//www.jwatch.org/misc/privacy.dtl",
  "policy_title": "Journal Watch: Privacy Policy",
  "policy_url": "jwatch.org/misc/privacy.dtl",
  "sha1": "617fc2ee3742e51ee5c278b7856f613dbfed1a03",
  "simhash": 1239301588879535533,
  "simhash_updated": false,
  "site_hostname": "jwatch.org",
  "site_url": "http://jwatch.org",
  "smog": 14.6,
  "strict_updated": true,
  "timestamp": "20090616060721",
  "word_count": 1188,
  "year": 2009
}

--- a/j/jw/jwa/jwatch.org.html
+++ b/j/jw/jwa/jwatch.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jwatch.org privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216044344id_/http%3A//www.jwatch.org/misc/privacy.dtl) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jwatch.org privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616060721id_/http%3A//www.jwatch.org/misc/privacy.dtl) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -45,6 +45,7 @@
 
   
   
+
 
 
 
@@ -163,6 +164,7 @@
 
 
 
+
 <!-- CheckM8 Tag -->
 <script type="text/javaScript">
 <!--
@@ -183,13 +185,14 @@ var CM8Profile = "house_only=yes";
 
 		
 			
+<!-- banner ad -->
 <div id="adBanner728x90">
 
 <script type="text/javascript" language="JavaScript">CM8ShowAd("Leaderboard");</script>
 <noscript>
 <a href="http://web.checkm8.com/adam/ep/click/mms.jw.misc/Leaderboard">
 
-<img src="http://web.checkm8.com/adam/noscript?cat=mms.jw.misc&page=014&format=Leaderboard" border="0" alt="Advertisement">
+<img src="http://web.checkm8.com/adam/noscript?cat=mms.jw.misc&page=302&format=Leaderboard" border="0" alt="Advertisement">
 
 </a>
 </noscript>
@@ -197,6 +200,9 @@ var CM8Profile = "house_only=yes";
 </div>
 
 		
+
+
+
 
         <div id="headerContent">
                 <a class="logo" href="http://www.jwatch.org/"><img src="/shared/images/logo_jwatch.gif" alt="Journal Watch summarizes medical research articles from over 180 scientific and medical journals." width="330" height="71"></a>
@@ -223,6 +229,8 @@ var CM8Profile = "house_only=yes";
                 </div>
 </div>
 
+
+
 <div>
 
 
@@ -240,14 +248,21 @@ var CM8Profile = "house_only=yes";
 <ul id="primaryNavigation">
   <li class="Home"><a href="http://www.jwatch.org/"><span>Home</span></a></li>
   <li class="audio"><a href="http://www.jwatch.org/misc/about_audio.dtl"><span>Audio</span></a></li>
+  
   <li class="blogs"><a href="http://www.jwatch.org/misc/blogs.dtl"><span>Blogs</span></a>
     <ul class="subMenu">
-	  <li><a class="newMenu" href="http://blogs.jwatch.org/pov/hiv-id-observations/">HIV and ID Observations</a></li>
+	  <li><a href="http://blogs.jwatch.org/gutcheck/">Gut Check</a></li>
+	  <li><a href="http://blogs.jwatch.org/hiv-id-observations/">HIV and ID Observations</a></li>
 	</ul>
   </li>
   <li class="cmeCenter"><a href="http://cme.jwatch.org"><span>CME Center</span></a></li>
   <li class="jwBeta"><a href="http://beta.jwatch.org/"><span>JW Beta</span></a></li>
-  <li class="medNews"><a href="http://firstwatch.jwatch.org"><span>Medical News</span></a></li>
+  <li class="medNews"><a href="http://www.jwatch.org/misc/about_MedNews.dtl"><span>Medical News</span></a>
+    <ul class="subMenu">
+      <li><a class="newMenu" href="http://h1n1.jwatch.org/">H1N1 Influenza Center </a></li>
+      <li><a href="http://firstwatch.jwatch.org">Physician's First Watch</a></li>
+    </ul>
+  </li>
   <li class="specialties"><a href="http://www.jwatch.org/specialties.dtl"><span>Specialities</span></a>
 	  <ul class="subMenu">
 		<li><a href="http://cardiology.jwatch.org">Cardiology</a></li>
@@ -265,7 +280,7 @@ var CM8Profile = "house_only=yes";
 		<li><a href="http://womens-health.jwatch.org">Women's Health</a></li>
 	  </ul>
   </li>
-  <li class="watchTopics"><a href="http://www.jwatch.org/collections/index.dtl"><span>Topics</span></a>
+  <li class="topics"><a href="http://www.jwatch.org/collections/index.dtl"><span>Topics</span></a>
 	  <ul class="subMenu">
 		
 		
@@ -524,7 +539,7 @@ Journal Watch is owned and published by the Massachusetts Medical Society. Our p
 <noscript>
 <a href="http://web.checkm8.com/adam/ep/click/mms.jw.misc/Badge">
 
-<img src="http://web.checkm8.com/adam/noscript?cat=mms.jw.misc&page=015&format=Badge" border="0" alt="Advertisement">
+<img src="http://web.checkm8.com/adam/noscript?cat=mms.jw.misc&page=304&format=Badge" border="0" alt="Advertisement">
 
 </a>
 </noscript>
@@ -536,7 +551,7 @@ Journal Watch is owned and published by the Massachusetts Medical Society. Our p
 <noscript>
 <a href="http://web.checkm8.com/adam/ep/click/mms.jw.misc/Righttower">
 
-<img src="http://web.checkm8.com/adam/noscript?cat=mms.jw.misc&page=015&format=Righttower" border="0" alt="Advertisement">
+<img src="http://web.checkm8.com/adam/noscript?cat=mms.jw.misc&page=304&format=Righttower" border="0" alt="Advertisement">
 
 </a>
 </noscript>
@@ -567,7 +582,7 @@ Journal Watch is owned and published by the Massachusetts Medical Society. Our p
 		</ul>
 
 <div class="copyrightInfo">
-<a href="http://www.jwatch.org/misc/copyright.dtl">Copyright</a> © 2008.
+<a href="http://www.jwatch.org/misc/copyright.dtl">Copyright</a> © 2009.
 <a href="http://www.massmed.org" target="_blank">Massachusetts Medical Society</a>.
 All rights reserved.
 </div>
